# portfolio-data-testcoverage

./: .gitignore  LICENSE  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: pyproject.toml
backend/quality_gate/: api.py  checks.py  corrupt.py  gate.py  ingest.py  storage.py
backend/tests/: test_api.py  test_checks.py  test_dataset.py  test_gate.py  test_runs.py
backend/tests/archive/: test_api.py  test_checks.py  test_contract.py  test_gate.py  test_runs.py
