[project]
name = "quality-gate"
version = "0.1.0"
description = "Validation engine and API for the ML dataset quality gate"
requires-python = ">=3.12"
dependencies = ["pandas>=2.2"]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.6"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["quality_gate*"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
