[project]
name = "quality-gate"
version = "0.1.0"
description = "Validation engine and API for the ML dataset quality gate"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.2",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "datasets>=3.0",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.1",
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.6", "httpx>=0.27"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["quality_gate*"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
